DZ3/minio-headless.yaml
apiVersion: v1
kind: Service
metadata:
  labels:
    app: minio
  name: minio-headless
spec:
  type: ClusterIP
  clusterIP: None
  selector:
    app: minio
  ports:
  - port: 80
    protocol: TCP
    targetPort: 9001
