DZ3/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
    ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
#  - host: minikube.uven.ru
   - http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-headless
             port: 
                number: 80
      - path: /web
        pathType: Prefix
        backend:
          service:
            name: web-headless
            port: 
               number: 80
