DZ3/ingress1.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-minio
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: minikube.uven.ru
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
             name: minio-headless
             port: 
                number: 80
